bynkc/tests/fixtures/positive/29_explicit_err/input.karn
commons test {
  fn refuse(n: Int) -> Result[Int, String] {
    Err("nope")
  }
}
