bynkc/tests/fixtures/negative/166_list_element_mismatch/input.karn
commons bad {
  fn f() -> Int {
    let xs = [1, "two"]
    0
  }
}
